--- a/1-LayoutExplorer/app/src/main/res/values/id.xml
+++ b/1-LayoutExplorer/app/src/main/res/values/id.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="id_linearlayout_vertical_button">id_linearlayout_vertical_button</string>
     <string name="id_linearlayout_horizontal_button">id_linearlayout_horizontal_button</string>
+    <string name="id_relativelayout_button">id_relativelayout_button</string>
+    <string name="id_constraintlayout_button">id_constraintlayout_button</string>
+    <string name="id_framelayout_button">id_framelayout_button</string>
+    <string name="id_tablelayout_button">id_tablelayout_button</string>
+    <string name="id_listview_button">id_listview_button</string>
+    <string name="id_gridview_button">id_gridview_button</string>
 </resources>
