--- a/1-LayoutExplorer/app/src/main/res/layout/activity_table_layout.xml
+++ b/1-LayoutExplorer/app/src/main/res/layout/activity_table_layout.xml
@@ -18,7 +18,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="#E91E63"
-            android:text="TextView on Row1" />
+            android:text="TextView1 on Row1" />
 
         <TextView
             android:id="@+id/textView10"
@@ -27,7 +27,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="#CDDC39"
-            android:text="TextView on Row1" />
+            android:text="TextView2 on Row1" />
     </TableRow>
 
     <TableRow
@@ -40,14 +40,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text=" Button on Row2" />
+            android:text=" Button1 on Row2" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text=" Button on Row2" />
+            android:text=" Button2 on Row2" />
     </TableRow>
 
 </TableLayout>
