--- a/1-LayoutExplorer/app/src/main/res/layout/activity_main.xml
+++ b/1-LayoutExplorer/app/src/main/res/layout/activity_main.xml
@@ -53,5 +53,11 @@
             android:layout_height="wrap_content"
             android:text="TableLayout" />
 
+        <Button
+            android:id="@+id/id_gridlayout_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GridLayout" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
