--- a/1-LayoutExplorer/app/src/main/res/values/id.xml
+++ b/1-LayoutExplorer/app/src/main/res/values/id.xml
@@ -6,6 +6,5 @@
     <string name="id_constraintlayout_button">id_constraintlayout_button</string>
     <string name="id_framelayout_button">id_framelayout_button</string>
     <string name="id_tablelayout_button">id_tablelayout_button</string>
-    <string name="id_listview_button">id_listview_button</string>
-    <string name="id_gridview_button">id_gridview_button</string>
+    <string name="id_gridlayout_button">id_gridlayout_button</string>
 </resources>
